Fixed issue in Chrome where title was being covered up because of flex-grow

--- a/less/main/components/WelcomeBar.less
+++ b/less/main/components/WelcomeBar.less
@@ -209,6 +209,8 @@
   .WelcomeBarItem-heading {
     .to-em(font-size, @WelcomeBar-heading-font-size, @WelcomeBar-font-size);
     .to-em(margin-bottom, 10, @WelcomeBar-heading-font-size);
+    .to-em(min-height, @WelcomeBar-heading-font-size * 1.2, @WelcomeBar-heading-font-size);
+    line-height: 1.2;
 
     & > .icon {
       display: none;
